Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Added mod_init() and mod_void() to API::Std.
    * Use Class::Unload.
    * Handle SIGTERM, SIGINT and SIGHUP.
    * Added quit() to API::IRC.
    * Added notice() to API::IRC.
    * Added privmsg() to API::IRC.
    * Added mode() to API::IRC.
    * Added PASS support.
    * Bug fix: err() fatal errors now work. They didn't work
      due to bad regex.
    * Added an installation script.
    * Fork into the background if not in debug mode.
    * Begin on API::IRC.
    * Parse PING and Numeric:001.
    * Begin on the IRC parser.
    * Added sockets, support for multiple asynchronous sockets.
    * Bug fix: conf_get() now returns correct data by checking
      what type of reference the requested value is.
    * Foundation completed.
    * Added API function err()
    * Added API function dbug()
    * Added a debug mode.
    * Old logs can now expire if set to do so in config.
    * Added API function alog()
    * Added API::Log::expire_logs()
    * Added API function println()
    * Use Mouse.
    * Added contributor; Chazz "Alexandria" Wolcott.
    * Gettext is no longer used.
    * German translations. Contributed by Chazz "Alexandria" Wolcott.
    * Converted English and French files to new format.
    * Created a new method of translation.
    * Use Exporter for the API functions.
    * Added developer; Timothy Estes.
    * Added developer; Russell Bradford.
    * Require Perl 5.10.0 or higher.
    * Removed developer; Russell Bradford.
    * Renamed config value language to locale.
    * Added an example config file.
    * Added API function conf_get()
    * Renamed API::Standard to API::Std
    * Created a configuration file parser.
    * New developer; Russell Bradford.
    * Import the POSIX module.
    * Fixed accent marks in French translation files.
    * French translations.